Change download link in thank-you page
Updated the download link for the application.

--- a/customer-debts/thank-you.html
+++ b/customer-debts/thank-you.html
@@ -36,7 +36,7 @@
     <h1>Ευχαριστούμε για την αγορά 🎉</h1>
     <p>Μπορείς να κατεβάσεις την εφαρμογή από το παρακάτω κουμπί.</p>
 
-    <a href="https://YOUR-DOWNLOAD-LINK/CustomerDebts_Setup.exe">
+    <a href="downloads/CustomerDebts.exe">
       Κατέβασμα εφαρμογής
     </a>
 
@@ -47,3 +47,4 @@
 
 </body>
 </html>
+
