Update Stripe payment link in index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="price">70€</div>
         <div class="small">Εφάπαξ αγορά • Άμεση πρόσβαση</div>
         <!-- 1) Βάλε εδώ το Stripe Payment Link -->
-        <a class="btn" href="PASTE_YOUR_STRIPE_PAYMENT_LINK_HERE" target="_blank" rel="noopener">
+        <a class="btn" href="https://buy.stripe.com/test_7sY4gy0JmcBA9habLbdQQ00" target="_blank" rel="noopener">
           Αγορά με κάρτα (Stripe)
         </a>
         <!-- 2) Προαιρετικά: link σε οδηγίες εγκατάστασης -->
