--- a/customer-debts/thank-you.html
+++ b/customer-debts/thank-you.html
@@ -36,7 +36,7 @@
     <h1>Ευχαριστούμε για την αγορά 🎉</h1>
     <p>Μπορείς να κατεβάσεις την εφαρμογή από το παρακάτω κουμπί.</p>
 
-    <a href="downloads/CustomerDebts.exe">
+    <a href="downloads/Customer%20Debts%20Manager.exe" dwonload>
       Κατέβασμα εφαρμογής
     </a>
 
@@ -59,5 +59,6 @@
 
 </body>
 </html>
+
 
 
